--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,4 +13,8 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
+
+    <style name="EditText" parent="Theme.MaterialComponents.Light.NoActionBar.Bridge">
+        <item name="android:textColorHint">@color/transparent</item>
+    </style>
 </resources>
